--- a/index.html
+++ b/index.html
@@ -146,37 +146,7 @@
         <h1 id="ways" class="kir">НАПРАВЛЕНИЯ</h1>
         <h2 id="choose" class="kir">ОСТАЛОСЬ ТОЛЬКО ВЫБРАТЬ</h2>
         <div class="grid">
-            <div class="where kir">
-                <div class="course">
-                    <a href="3d.html">
-                        <img width="100%" src="images/graphics-3d.svg" alt="">
-                        <h2 id="crsname">3D Графика</h2>
-                    </a>
-                </div>
-                <div class="course">
-                    <a href="web-des.html">
-                        <img width="100%" src="images/web-design.svg" alt="">
-                        <h2 id="crsname">Веб-Дизайн</h2>
-                    </a>
-                </div>
-                <div class="course">
-                    <a href="python.html">
-                        <img width="100%" src="images/python.svg" alt="">
-                        <h2 id="crsname">Python</h2>
-                    </a>
-                </div>
-                <div class="course">
-                    <a href="sharp.html">
-                        <img width="100%" src="images/c-sharp.svg" alt="">
-                        <h2 id="crsname">С#</h2>
-                    </a>
-                </div>
-                <div class="course">
-                    <a href="unity.html">
-                        <img width="100%" src="images/unity.svg" alt="">
-                        <h2 id="crsname">Разработка На Unity3D</h2>
-                    </a>
-                </div>
+            <div class="where kir" id="pushXMLCards">
             </div>
         </div>
         <h1 id="name" class="kir">ГАЛЕРЕЯ</h1>
@@ -250,6 +220,7 @@
           © 2018 <b id="weight">It_Club</b> Copyright
         </div>
     </footer>
+    <script src="scripts/xmlToCards.js"></script>
   <!-- footer -->
 </body>
 </html>
